Fix logo overflow

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
   justify-content: center;
   align-items: center;
   color: white;
-  font-size: 5rem;
+  font-size: 4rem;
 
   background-color: rgba(0, 0, 0, 0.5);
 }
